--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
-body { background-image: url(images/zoo.jpg);
+body {
+    background-color: beige;
+    background-image: url(images/zoo.jpg);
+}
 
+form {
+    background-color: rgb(211, 153, 83);
+    width: 300px;
+    padding: 30px;
+    
+}
+
+div {
+    display: flex;
+    justify-content: center;
+    margin: 100px;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+}
+
+.bounce {
+    width: 50px;
+    height: 50px;
+    background-color: lightseagreen;
+    border-radius: 50%;
+    position: relative;
+    animation: bounce 2s infinite;
 }
